[gd_scene load_steps=6 format=3 uid="uid://eu4jb4g0l8wb"]

[ext_resource type="PackedScene" uid="uid://ecytbli35ftq" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://dsuwk0oxrqxgk" path="res://scenes/game_manager.gd" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://g8kt57ha300c" path="res://scenes/ground.tscn" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://bhdwehsgsbaxx" path="res://scripts/stop_watch.gd" id="5_iywne"]
[ext_resource type="FontFile" uid="uid://by3jvrxmonp55" path="res://assets/fonts/PixelOperator8.ttf" id="7_u5sy4"]

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_yqjtg")

[node name="Ground1" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(75, 0)

[node name="Ground2" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(491, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -18)
zoom = Vector2(7, 7)

[node name="Player" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(-40, -10)

[node name="Timer" type="Timer" parent="."]

[node name="Score" type="Label" parent="."]
visible = false
offset_left = -79.0
offset_top = -62.0
offset_right = 13.0
offset_bottom = -39.0
theme_override_fonts/font = ExtResource("7_u5sy4")
theme_override_font_sizes/font_size = 8
text = "Score:"

[node name="StopWatch" type="Panel" parent="."]
offset_left = -80.0
offset_top = -62.0
offset_right = -26.0
offset_bottom = -52.0
scale = Vector2(0.5, 0.5)
script = ExtResource("5_iywne")

[node name="Minutes" type="Label" parent="StopWatch"]
layout_mode = 0
offset_right = 19.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("7_u5sy4")
theme_override_font_sizes/font_size = 8
text = "00:"
horizontal_alignment = 2

[node name="Seconds" type="Label" parent="StopWatch"]
layout_mode = 0
offset_left = 19.0
offset_right = 38.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("7_u5sy4")
theme_override_font_sizes/font_size = 8
text = "00:"
horizontal_alignment = 2

[node name="Miliseconds" type="Label" parent="StopWatch"]
layout_mode = 0
offset_left = 39.0
offset_right = 53.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("7_u5sy4")
theme_override_font_sizes/font_size = 8
text = "00"
horizontal_alignment = 2
